<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rock, Paper, Scissors</string>
    <string name="intro">PLAY!</string>
    <string name="action_settings">Settings</string>
    <string name="rock">ROCK</string>
    <string name="paper">PAPER</string>
    <string name="scissors">SCISSORS</string>
    <string name="userchoice">You Chose:</string>
    <string name="comchoice">Computer Chose:</string>
    <string name="status"></string>
    <string name="win">W: </string>
    <string name="tie">T: </string>
    <string name="loss">L: </string>
    <string name="win_count">0</string>
    <string name="tie_count">0</string>
    <string name="loss_count">0</string>

</resources>
